Improved the header: Added bottom yellow line, centered text, verified it displays correctly on mobile

--- a/common/header.css
+++ b/common/header.css
@@ -1,3 +1,20 @@
 nav img {
     width: 47px;
 }
+
+.navbar-header {
+    border-bottom: 2px solid yellow;
+}
+
+.navbar-header .navbar-text {
+    text-align: center;
+    font-weight: bold;
+}
+
+.navbar-logo {
+    position: absolute;
+    float: left;
+    padding-top: 12px;
+    padding-left: 12px;
+    padding-right: 12px;
+}
